--- a/.github/workflows/Dockerize.yml
+++ b/.github/workflows/Dockerize.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v2
       with:
-        java-version: '11'
+        java-version: '8'
 
     - name: Build with Maven
       run: mvn clean install
@@ -31,7 +31,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: your-docker-repo/your-image-name:latest
+        tags: pyamini17/dockerize_1:latest
         dockerfile: Dockerfile
       env:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
