--- a/.github/workflows/Dockerize.yml
+++ b/.github/workflows/Dockerize.yml
@@ -31,7 +31,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: pyamini17/dockerize_1:latest
+        tags: yaminip17/dockerize_1:latest
         dockerfile: Dockerfile
       env:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
